<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewWorkoutActivity">


    <include layout="@layout/tool_bar"></include>

    <TextView
        android:id="@+id/workTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workTimeText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/restTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restTimeText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workTimeText"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/cycleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repsText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setsText"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/coolDownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooldownTimeText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restTimeText"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/setsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setsText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coolDownText"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/workNum"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:hint = "@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/workTimeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />


    <EditText
        android:id="@+id/restNum"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:hint = "@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toEndOf="@+id/restTimeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/cooldownNum"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:hint = "@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/coolDownText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/setsNum"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:hint = "@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toEndOf="@+id/setsText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/cycleNum"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:hint = "@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/cycleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/startWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startWorkout"
        android:textSize="15dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

</androidx.constraintlayout.widget.ConstraintLayout>